--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-share": "^5.0.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.0.1",
