--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@docusaurus/core": "^3.2.1",
     "@docusaurus/preset-classic": "^3.2.1",
     "@mdx-js/react": "^3.0.0",
+    "chart.js": "^4.4.2",
     "clsx": "^2.0.0",
+    "install": "^0.13.0",
+    "npm": "^10.5.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-share": "^5.0.3"
   },
